@@ -101,6 +101,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 26781) {{PAGENAME}} and related parser functions escape their output better.
 * (bug 26716) Provide link to instructions for external editor related preferences
   and add a comment to the ini control file explaining what is going on.
+* Trying to upload a file with no extension or with a disallowed MIME type now gives
+  the right message instead of complaining about a MIME/extension mismatch
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
